--- a/WordGuess/index.html
+++ b/WordGuess/index.html
@@ -37,8 +37,10 @@
 
     <hr/>
     
-    <div class="word-board-container">
+    <div class="bottom-container">
+      <div class="word-container">
 
+      </div>
     </div>
   </div>
 
