adding background image, re-arrange my functions in order, added the disabled/enabled option

--- a/WordGuess/index.html
+++ b/WordGuess/index.html
@@ -14,7 +14,7 @@
       
       <div class="spinner">
         <div id="textbox">0</div>
-        <button id="spin_button" onclick="spinWheel()">Spin</button>
+        <button id="spin_button" onclick="spinWheel()" disabled="true">Spin</button>
       </div>
       
       <div class="stats">
