fix the logic for the spinwheel, re-initialized varaibles for replay

--- a/WordGuess/index.html
+++ b/WordGuess/index.html
@@ -14,12 +14,12 @@
       
       <div class="spinner">
         <div id="textbox"></div>
-        <button id="spin_button" onclick="spinWheel()" disabled="true">Spin</button>
+        <button id="spin_button" onclick="handleSpin()" disabled="true">Spin</button>
       </div>
       
       <div class="stats">
         <div id="scores">
-          Score: $<span id="current-score">0</span>
+          Amount: $<span id="current-score">0</span>
         </div>
         <div id="lives">
           Lives: <span id="current-lives">5</span>
